force-app/main/default/objects/Premium_Appointment_Setting__c/Premium_Appointment_Setting__c.object-meta.xml
<CustomObject>
    <label>Premium Appointment Setting</label>
    <nameField>
        <label>Premium Appointment Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premium Appointment Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>