force-app/main/default/objects/Premium_Appointment_Setting__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>