force-app/main/default/objects/Premium_Appointment_Setting__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Last Modified By (Custom)</relationshipLabel>
    <relationshipName>Last_Mod_By_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>